modal height fix + solid solution for overflows

--- a/Vefur/thjonustukerfi-react-app/src/components/Order/CreateOrder/PickCustomerModal/PickCustomerModal.css
+++ b/Vefur/thjonustukerfi-react-app/src/components/Order/CreateOrder/PickCustomerModal/PickCustomerModal.css
@@ -8,7 +8,9 @@
     background-color: var(--main-color);
     border: 2px solid #3f51b5;
     width: 50em;
+    max-width: 95%;
     height: 45em;
+    max-height: 95%;
 }
 
 h2 {
@@ -19,11 +21,13 @@ h2 {
 .customer-select-view .customer-select-list {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    height: 30em;
-    overflow-y: scroll;
-    overflow-x: hidden;
 }
 
-.tab {
-    padding: 1rem;
+.fade-modal {
+    position: absolute;
+}
+
+.fade-modal .tab {
+    max-height: calc(100% - 48px);
+    overflow-y: auto;
 }
